@@ -1,12 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST ruby-openid-1.1.4.gem 117760 RMD160 dbbf1f0cd139d959cc8127880f8f1ef07f9045ef SHA1 328eef8d03bb845e50f30c91a4c7ed59688bc8de SHA256 8bd6dc9f8a14eac06a722c2a3a2d27f4d565aa925ac4bd4db9773b19d34110f8
+DIST ruby-openid-2.0.3.gem 268800 RMD160 654ee34acd0febade58d391ef1b09a2724e67bec SHA1 526255eeebeb27d327a20fb71326c7137235c3cc SHA256 c9a40fa455487c0d2b2b3e02a111c38c45ca3fa5e5d8d09da8a9c831601a3326
 EBUILD ruby-openid-1.1.4.ebuild 556 RMD160 dd22481ff7400142277f65ba85efebb27e5afc8e SHA1 a743f1aa68963065deb9cd199bc874daa17bd96f SHA256 682eac4f8e8eaa06e6b1aca221d6c7d37208420c50eef160eda1ea8a02a7f37c
 MD5 c01a39dbc73da4202e13da78ce36cc19 ruby-openid-1.1.4.ebuild 556
 RMD160 dd22481ff7400142277f65ba85efebb27e5afc8e ruby-openid-1.1.4.ebuild 556
 SHA256 682eac4f8e8eaa06e6b1aca221d6c7d37208420c50eef160eda1ea8a02a7f37c ruby-openid-1.1.4.ebuild 556
-MISC ChangeLog 413 RMD160 b88d3cf5cf0ff16cab6d3d50bb42d056a5647dae SHA1 46738e93bbae5daae54b0e5177380eb1ebfa0680 SHA256 2a65726f2be7f1d628a75252339b8805fd53bf4210141788a453696974b8a3da
-MD5 7510c5cd3e292827e0f59aa7aeaa974e ChangeLog 413
-RMD160 b88d3cf5cf0ff16cab6d3d50bb42d056a5647dae ChangeLog 413
-SHA256 2a65726f2be7f1d628a75252339b8805fd53bf4210141788a453696974b8a3da ChangeLog 413
+EBUILD ruby-openid-2.0.3.ebuild 565 RMD160 bbe84e6e59c8fc760a6ecc5cf0a1f78f01b7c169 SHA1 5416288fc8288bc3b14f7e965aaafe20cfc4cf81 SHA256 fc021baa6ec10a97ba6c6d3610cf38a97f755f7a133d72102a9421bff3fdc8fd
+MD5 b4a2f6979bb726778163294b71b9403f ruby-openid-2.0.3.ebuild 565
+RMD160 bbe84e6e59c8fc760a6ecc5cf0a1f78f01b7c169 ruby-openid-2.0.3.ebuild 565
+SHA256 fc021baa6ec10a97ba6c6d3610cf38a97f755f7a133d72102a9421bff3fdc8fd ruby-openid-2.0.3.ebuild 565
+MISC ChangeLog 587 RMD160 0a2b615f9497f4f13ccc497d5bf77ed64e8278c4 SHA1 92f0e14127a4d2b917f6de48448a84d0d7fbbb84 SHA256 673284c6ad6adf88f82e7e25374677d684ac9c82f0655f271cee698072572649
+MD5 098352adea92347f05c2157d9ed67874 ChangeLog 587
+RMD160 0a2b615f9497f4f13ccc497d5bf77ed64e8278c4 ChangeLog 587
+SHA256 673284c6ad6adf88f82e7e25374677d684ac9c82f0655f271cee698072572649 ChangeLog 587
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 MD5 b522b82d2c47bc548a6607f0f577ab5e metadata.xml 158
 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 metadata.xml 158
@@ -14,3 +22,13 @@ SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032 metadata
 MD5 ec508a9aa55127d5337138fb25c7576c files/digest-ruby-openid-1.1.4 244
 RMD160 1df5402515e57379f62ee658cf38caa515584ae0 files/digest-ruby-openid-1.1.4 244
 SHA256 34cc91d12585a988530575491f3eef042489ce8d67c1d1f9d3c6c10cc81eb319 files/digest-ruby-openid-1.1.4 244
+MD5 45075d4b3fab8505c161634cbfacc851 files/digest-ruby-openid-2.0.3 244
+RMD160 3d897a9a5b62647e29d2358a24732fd7b5ee2c42 files/digest-ruby-openid-2.0.3 244
+SHA256 9905a3744f92edeb5d9cec85465816df92c5d7e873619c6f828282ffc03daeb6 files/digest-ruby-openid-2.0.3 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHmuTiQUozDL2JlH4RAn8QAJ9+tkCXx6zwjSCbN2hWfu4y/tOGjwCbBvKg
+ObAlSsti7WKqSD8KKCohSzo=
+=LKpH
+-----END PGP SIGNATURE-----
