@@ -1,0 +1,3 @@
+MD5 b53571ee30664276fa5bc09abbc8c6b4 ruby-openid-2.0.3.gem 268800
+RMD160 654ee34acd0febade58d391ef1b09a2724e67bec ruby-openid-2.0.3.gem 268800
+SHA256 c9a40fa455487c0d2b2b3e02a111c38c45ca3fa5e5d8d09da8a9c831601a3326 ruby-openid-2.0.3.gem 268800
