@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-openid
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-openid/ChangeLog,v 1.1 2007/03/31 08:04:30 robbat2 Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-openid/ChangeLog,v 1.2 2008/01/26 07:44:28 graaff Exp $
+
+*ruby-openid-2.0.3 (26 Jan 2008)
+
+  26 Jan 2008; Hans de Graaff <graaff@gentoo.org> +ruby-openid-2.0.3.ebuild:
+  Version bump: note API changes compared to ruby-openid-1.x.x
 
 *ruby-openid-1.1.4 (31 Mar 2007)
 
